--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -7,6 +7,7 @@ $input-background: #ffffff; // --inputBackground
 $card-background: rgb(32, 50, 70); // --cardBackgroundColor
 $secondary-text: #d4d8dd; // --secondaryText
 $primary-dark: #3a87cf; // --primaryDark
+$list-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected background
 $table-header-background: $global-app-header;
 $table-row-hover-background: $primary-light-hover;
 $slider-track-background: $secondary-text;
